move VERSION into main file, since main file inherits another class, but i don't want to duplicate the inheriting in version file

--- a/lib/called/tmpl.html.erb
+++ b/lib/called/tmpl.html.erb
@@ -11,7 +11,8 @@
         bottom: 0;
         background-color: black;
         color: white;
-        transition: all 0.5s ease
+        transition: all 0.5s ease;
+        overflow-y: scroll;
       }
 
       #detail ul {
